--- a/Fronted/quasar-project/package.json
+++ b/Fronted/quasar-project/package.json
@@ -18,7 +18,8 @@
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
     "vue-i18n": "^9.0.0",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
