--- a/Fronted/quasar-project/package.json
+++ b/Fronted/quasar-project/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
+    "connect-session-knex": "^5.0.0",
+    "express-session": "^1.18.1",
+    "knex": "^3.1.0",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
     "vue-i18n": "^9.0.0",
